--- a/public/assets/web/ASSETS_En/css/STYLEeN9.css
+++ b/public/assets/web/ASSETS_En/css/STYLEeN9.css
@@ -12073,7 +12073,7 @@ a:hover span {
 } */
 
 /*************** order page  ***********/
-.changeLocation {
+/* .changeLocation {
   display: flex;
   width: 65%;
   align-items: center;
@@ -12135,10 +12135,10 @@ a:hover span {
   border: none;
   outline: none;
   border-radius: 5px;
-}
+} */
 
 /* add location section */
-.addLocation {
+/* .addLocation {
   padding: 10px;
   margin-bottom: 20px;
   overflow: hidden;
@@ -12303,7 +12303,7 @@ a:hover span {
   .changeLocation button {
     font-size: 8px;
   }
-}
+} */
 
 /*************** payment page  ***********/
 .payments {
@@ -12832,7 +12832,7 @@ a:hover span {
 
 /* dropdown cart items */
 .dropdown-cart .items {
-  padding: 20px;
+  padding: clamp( 5px, 1.0416666666666665vw, 20px);
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
@@ -12877,6 +12877,14 @@ a:hover span {
   gap: 1em;
   padding: 5px;
   cursor: pointer;
+
+  .fa-trash-alt{
+    color: #FF1212;
+  }
+
+  .fa-heart{
+    color: #9098B1;
+  }
 }
 
 .dropdown-cart .items .item .leftButtons .input-quantity {
@@ -12900,7 +12908,7 @@ a:hover span {
   color: #fd9636;
   background-color: #ebf0ff;
   padding: 5px;
-  width: 40px;
+  width: 30px;
   text-align: center;
   border: none;
   outline: none;
@@ -12923,9 +12931,9 @@ a:hover span {
 }
 
 .dropdown-cart .items .item .itemInfo img {
-  width: 112px;
-  height: 75px;
+  width: clamp( 100px, 5.833333333333333vw, 112px);
   border-radius: 5px;
+  min-width: 100px !important;
 }
 
 .dropdown-cart .items .item .itemInfo .info {
@@ -12937,36 +12945,33 @@ a:hover span {
 
 .dropdown-cart .items .item .itemInfo .info .title {
   color: #000;
-  font-size: 12px !important;
+  font-size: clamp( 8px, 0.625vw, 12px) !important;
   text-align: left;
   text-transform: capitalize;
-  font-weight: 500;
-  font-family: Alexandria;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  font-family: Cairo;
+  font-weight: 700;
+  line-height: clamp( 18px, 1.1458333333333333vw, 22px);
 }
 
 .dropdown-cart .items .item .itemInfo .info .cat {
   color: #7f7f7f;
-  font-size: 8px;
+  font-size: clamp( 5px, 0.4166666666666667vw, 8px);
   text-align: left;
   text-transform: capitalize;
-  font-weight: 500;
-  font-family: Alexandria;
+  font-family: Cairo;
+  font-weight: 700;
+  line-height: clamp( 10px, 0.7291666666666666vw, 14px);
 }
 
 .dropdown-cart .items .item .itemInfo .info .price {
   color: #fd9636;
-  font-size: 14px;
+  font-size: clamp( 10px, 0.7291666666666666vw, 14px);
   margin-top: 12px;
-  font-weight: bold;
   letter-spacing: 0.5px;
-  line-height: 150%;
-  font-family: Alexandria;
   text-align: left;
+  font-family: Poppins;
+  font-weight: 700;
+  line-height: clamp( 18px, 1.09375vw, 21px);
 }
 
 /* dropdown cart total */
@@ -12996,7 +13001,7 @@ a:hover span {
       a {
         width: 100%;
         font-family: Alexandria;
-        font-size: 16px;
+        font-size: clamp( 12px, 0.8333333333333334vw, 16px);
         font-style: normal;
         font-weight: 400;
         line-height: normal;
@@ -13008,7 +13013,7 @@ a:hover span {
       border: 1px solid #fd9636;
 
       a {
-        color: #6d6d6d;
+        color: #fd9636;
       }
     }
 
