--- a/public/assets/web/ASSets/css/address.css
+++ b/public/assets/web/ASSets/css/address.css
@@ -69,7 +69,6 @@
     justify-content: space-between;
     padding: 20px 10px;
     margin: 40px auto;
-    direction: ltr;
     border: 1px solid #d9d9d9;
     border-radius: 20px;
 
@@ -95,19 +94,19 @@
       .locationDec {
         display: flex;
         flex-direction: column;
-        gap: 0;
+        gap: 5px;
 
         span {
           font-size: 18px;
           font-weight: 600;
-          text-align: left;
+          text-align: start;
           color: #000;
         }
 
         p {
           font-size: 12px;
           font-weight: 500;
-          text-align: left;
+          text-align: start;
           color: #000;
         }
       }
